@@ -1548,9 +1548,15 @@ DEFUN(RAWSOCK:UDPCSUM, buffer &key :START :END) { /* UDP checksum */
   VALUES1(fixnum(length)); skipSTACK(1);
 }
 
+#ifdef GNU     /* to prevent a gcc-warning "statement with no effect" */
+# define unused  (void)
+#else
+# define unused
+#endif
+
 void module__rawsock__init_function_2 (module_t* module);
 void module__rawsock__init_function_2 (module_t* module) {
-  (void*)module;                /* unused */
+  unused module;
 #if defined(WIN32_NATIVE)
   HMODULE ws2 = LoadLibrary("ws2_32.dll");
   if (ws2 != NULL) {
